--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.34.0",
     "scss": "^0.2.4",
+    "styled-components": "^5.3.0",
     "tachyons": "^4.12.0",
     "web-vitals": "^1.1.2"
   },
