--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.1",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
