--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
+    "react-parallax": "^3.3.0",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
