--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.1",
+    "particles-bg": "^2.5.5",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.0",
@@ -16,6 +17,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
     "react-parallax": "^3.3.0",
+    "react-particles-js": "^3.4.1",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
