--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.1",
     "particles-bg": "^2.5.5",
+    "phosphor-react": "^1.2.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.0",
