--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.14.3",
     "react-parallax": "^3.3.0",
     "react-particles-js": "^3.4.1",
     "react-responsive": "^8.2.0",
