--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.0",
     "react-calendar": "^3.4.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
