--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "particles-bg": "^2.5.5",
     "phosphor-react": "^1.2.1",
